add created for fun

--- a/index.html
+++ b/index.html
@@ -436,10 +436,10 @@
 				<div class="col-sm-6 col-sm-offset-3">
 
 					<div class="pfblock-header">
-						<h2 class="pfblock-title">Drop me a line</h2>
+						<h2 class="pfblock-title">DONT contact me!/h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+							This page just created for FUN lol
 						</div>
 					</div>
 
