--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 				<div class="col-sm-6 col-sm-offset-3">
 
 					<div class="pfblock-header">
-						<h2 class="pfblock-title">DONT contact me!/h2>
+						<h2 class="pfblock-title">DONT contact me!</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
 							This page just created for FUN lol
